# basic-1

./: .gitignore  .gitmodules  LICENSE  README.md
b1i/source/: CMakeLists.txt  b1extra.h  b1feat.h  b1i.c
b1ig/source/: B1igApp.cpp  B1igFrame.cpp  B1igFrame.h  CMakeLists.txt  b1feat.h  errors.h
common/docs/: changelog
common/samples/: 11.bsc  12.bsc  3.bsc  4.bsc  9.bsc
common/setup/: lnx_deb_distr.sh  lnx_tar_gz_distr.sh  win_7zip_zip_distr.bat
common/source/: version.h
distr/: README.md  b1i_lnx_amd64_gcc_1.0.0-26.deb  b1i_lnx_amd64_gcc_1.0.0-28.deb  b1i_lnx_amd64_gcc_1.0.0-29.deb  b1i_lnx_amd64_gcc_1.0.0-30.deb  b1i_lnx_amd64_gcc_1.0.0-31.deb  b1i_lnx_amd64_gcc_1.0.0-32.deb  b1i_lnx_amd64_gcc_1.0.0-33.deb  b1i_lnx_amd64_gcc_1.0.0-34.deb  b1i_lnx_amd64_gcc_1.0.0-35.deb  b1i_lnx_amd64_gcc_1.0.0-36.deb  b1i_lnx_amd64_gcc_1.0.0-37.deb  b1i_lnx_amd64_gcc_1.0.0-38.deb  b1i_lnx_amd64_gcc_1.0.0-39.deb  b1i_lnx_amd64_gcc_1.0.0-40.deb  b1i_lnx_amd64_gcc_1.0.0-41.deb  b1i_lnx_amd64_gcc_1.0.0-42.deb  b1i_lnx_amd64_gcc_1.0.0-43.deb  b1i_lnx_amd64_gcc_1.0.0-45.deb  b1i_lnx_amd64_gcc_1.0.0-46.deb  b1i_lnx_amd64_gcc_1.0.0-48.deb  b1i_lnx_amd64_gcc_1.0.0-49.deb  b1i_lnx_amd64_gcc_1.0.0-50.deb  b1i_lnx_amd64_gcc_1.0.0-52.deb  b1i_lnx_amd64_gcc_1.0.0-53.deb  b1i_lnx_amd64_gcc_1.0.0-54.deb  b1i_lnx_amd64_gcc_1.0.0-55.deb  b1i_lnx_amd64_gcc_1.0.0-56.deb  b1i_lnx_amd64_gcc_1.0.0-57.deb  b1i_lnx_amd64_gcc_1.0.0-61.deb  b1i_lnx_armhf_gcc_1.0.0-30.deb  b1i_lnx_armhf_gcc_1.0.0-31.deb  b1i_lnx_armhf_gcc_1.0.0-32.deb  b1i_lnx_armhf_gcc_1.0.0-33.deb  b1i_lnx_armhf_gcc_1.0.0-34.deb  b1i_lnx_armhf_gcc_1.0.0-35.deb  b1i_lnx_armhf_gcc_1.0.0-36.deb  b1i_lnx_armhf_gcc_1.0.0-37.deb  b1i_lnx_armhf_gcc_1.0.0-38.deb  b1i_lnx_armhf_gcc_1.0.0-39.deb  (+49 more)
docs/: changelog  embedding.md  limits.md  reference.md  syntax.md
samples/: 1.bsc  10.bsc  2.bsc  3.bsc  4.bsc  5.bsc  6.bsc  7.bsc  8.bsc  9.bsc  README.md
setup/b1i/: lnx_armhf_gcc_deb.sh  lnx_armhf_gcc_tar_gz.sh  lnx_x64_gcc_deb.sh  lnx_x64_gcc_tar_gz.sh  lnx_x86_gcc_deb.sh  lnx_x86_gcc_tar_gz.sh  win_x64_mingw_7zip_zip.bat  win_x86_mingw_7zip_zip.bat
setup/b1ig/: lnx_armhf_gcc_deb.sh  lnx_armhf_gcc_tar_gz.sh  lnx_x64_gcc_deb.sh  lnx_x64_gcc_tar_gz.sh  lnx_x86_gcc_deb.sh  lnx_x86_gcc_tar_gz.sh  win_x64_mingw_7zip_zip.bat  win_x86_mingw_7zip_zip.bat
source/b1i/: CMakeLists.txt  b1feat.h  b1i.c  b1i_lnx_armhf_gcc_dbg.sh  b1i_lnx_armhf_gcc_rel.sh  b1i_lnx_x64_gcc_dbg.sh  b1i_lnx_x64_gcc_rel.sh  b1i_lnx_x86_gcc_dbg.sh  b1i_lnx_x86_gcc_rel.sh  b1i_win_x64_mingw_dbg.bat  b1i_win_x64_mingw_rel.bat  b1i_win_x64_msvc19_dbg.bat  b1i_win_x64_msvc19_rel.bat  b1i_win_x86_mingw_dbg.bat  b1i_win_x86_mingw_rel.bat  b1i_win_x86_msvc10_dbg.bat  b1i_win_x86_msvc10_rel.bat  b1i_win_x86_msvc19_dbg.bat  b1i_win_x86_msvc19_rel.bat  b1iu_lnx_armhf_gcc_dbg.sh  b1iu_lnx_armhf_gcc_rel.sh  b1iu_lnx_x64_gcc_dbg.sh  b1iu_lnx_x64_gcc_rel.sh  b1iu_lnx_x86_gcc_dbg.sh  b1iu_lnx_x86_gcc_rel.sh  b1iu_win_x64_mingw_dbg.bat  b1iu_win_x64_mingw_rel.bat  b1iu_win_x64_msvc19_dbg.bat  b1iu_win_x64_msvc19_rel.bat  b1iu_win_x86_mingw_dbg.bat  b1iu_win_x86_mingw_rel.bat  b1iu_win_x86_msvc10_dbg.bat  b1iu_win_x86_msvc10_rel.bat  b1iu_win_x86_msvc19_dbg.bat  b1iu_win_x86_msvc19_rel.bat  get_git_rev.bat  get_git_rev.sh  gitrev.h  lnx_armhf_gcc_dbg.sh  lnx_armhf_gcc_rel.sh  (+18 more)
source/b1icommon/: get_git_rev.bat  gitrev.h  lnx_build.sh  win_build.bat
source/b1ig/: B1Interpreter.cpp  B1Interpreter.h  B1igApp.h  B1igFrame.cpp  B1igFrame.h  CMakeLists.txt  b1feat.h  b1ig_lnx_armhf_gcc_rel.sh  b1ig_lnx_x64_gcc_rel.sh  b1ig_lnx_x86_gcc_rel.sh  b1ig_win_x64_mingw_dbg.bat  b1ig_win_x64_mingw_rel.bat  b1ig_win_x86_mingw_dbg.bat  b1ig_win_x86_mingw_rel.bat  errors.cpp  exprg.cpp
source/common/: b1feat.h
source/core/: b1dbg.c  b1dbg.h  b1err.h  b1eval.c  b1ex.h  b1fn.c  b1fn.h  b1id.c  b1id.h  b1int.c  b1int.h  b1itypes.h  b1rpn.c  b1rpn.h  b1tok.c  b1tok.h  b1types.c  b1types.h  b1var.c  b1var.h
source/ext/: exio.c  exmem.cpp  exprg.cpp  exrnd.c  ext.cpp  exvar.cpp
source/setup/: b1i_lnx_armhf_gcc_deb.sh  b1i_lnx_armhf_gcc_tar_gz.sh  b1i_lnx_x64_gcc_deb.sh  b1i_lnx_x64_gcc_tar_gz.sh  b1i_lnx_x86_gcc_deb.sh  b1i_lnx_x86_gcc_tar_gz.sh  b1i_win_x64_mingw_7zip_zip.bat  b1i_win_x86_mingw_7zip_zip.bat  b1ig.desktop  b1ig_lnx_armhf_gcc_deb.sh  b1ig_lnx_armhf_gcc_tar_gz.sh  b1ig_lnx_x64_gcc_deb.sh  b1ig_lnx_x64_gcc_tar_gz.sh  b1ig_lnx_x86_gcc_deb.sh  b1ig_lnx_x86_gcc_tar_gz.sh  b1ig_win_x64_mingw_7zip_zip.bat  b1ig_win_x86_mingw_7zip_zip.bat  lnx_deb_distr.sh  lnx_tar_gz_distr.sh  win_7zip_zip_distr.bat
